--- a/CSS/css.css
+++ b/CSS/css.css
@@ -23,6 +23,23 @@ svg {
     margin-right: auto;
 }
 
+.big_tile {
+    width: 400px;
+    height: 400px;
+    opacity: 1;
+    background-color: #E8E8E8;    
+}
+
+.small_tile {
+    width: 100px;
+    height: 100px;
+    margin: 25px;
+    opacity: 1;
+    background-color: #FFFFFF;
+}
+
+
+}
 .grid_start {
     align: center;
     width: 100%;
@@ -39,6 +56,7 @@ svg {
 
 .grid > div {
     background-color: #E8E8E8;
+    margin: 5px;
     position: absolute;
     opacity:1;
 }
