Put buttons in table and fixed the random button
Also changed a case

--- a/CSS/css.css
+++ b/CSS/css.css
@@ -64,6 +64,12 @@ td {
     text-align: left;
 }
 
+#mainFrame {
+    vertical-align: top;
+    text-align: center;
+}
+
+
 a {
     color: white;
 }
